--- a/docs/css/demo.css
+++ b/docs/css/demo.css
@@ -1,4 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700|Give+You+Glory);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700|Give+You+Glory);
+/* use bellow link on dev env */
+/* @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700|Give+You+Glory); */
 @font-face {
 	font-weight: normal;
 	font-style: normal;
